# tool-recovery-lora

./: .gitignore  Makefile  README.md  pyproject.toml
data/: README.md
data/curated/: train.jsonl  val.jsonl
data/eval/: smoke.jsonl
docs/: stack-export-contract.md
docs/notes/: baseline-vanilla.md  phase2-train.md  phase3-live-eval.md  phase4-demo.md  phase5-bakeoff.md  t2-template-args-object.md
docs/superpowers/plans/: 2026-07-15-phase0-scaffold.md  2026-07-15-phase1-dataset.md  2026-07-15-phase2-unsloth-train.md  2026-07-15-phase3-live-eval.md  2026-07-15-phase4-demo.md  2026-07-15-phase5-bakeoff.md
docs/superpowers/specs/: 2026-07-15-tool-recovery-lora-design.md
scripts/: generate_dataset.py  run_bakeoff.py  run_demo.py  run_eval.py  run_train.py
src/tool_recovery_lora/: __init__.py
src/tool_recovery_lora/bakeoff/: __init__.py  claude_baseline.py  runner.py
src/tool_recovery_lora/data/: __init__.py  generate.py  loader.py  schema.py
src/tool_recovery_lora/demo/: __init__.py  graph.py  scenarios.py
src/tool_recovery_lora/eval/: __init__.py  infer.py  live_runner.py  metrics.py  parse.py  prompt.py  runner.py
src/tool_recovery_lora/train/: __init__.py  config.py  format_messages.py  runner.py
tests/: test_bakeoff_messages.py  test_demo_scenarios.py  test_eval_cli_flags.py  test_format_messages.py  test_generate.py  test_loader.py  test_metrics.py  test_parse_prompt.py  test_schema.py  test_train_config.py
