[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-recovery-lora"
version = "0.1.0"
description = "QLoRA fine-tuning for agentic tool-call recovery (small model + LangGraph)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Brescou" }]
dependencies = [
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]
train = [
    # Install when ready for GPU training (Phase 2+).
    # "unsloth",
    # "torch",
    # "transformers",
    # "datasets",
    # "trl",
    # "peft",
]

[project.urls]
Repository = "https://github.com/Brescou/tool-recovery-lora"

[tool.hatch.build.targets.wheel]
packages = ["src/tool_recovery_lora"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
